Fixed: text element centered even with text-alignment styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -368,6 +368,13 @@ body,
 .st-text.width-50 {
   width: 50%;
 }
+.st-text h1,
+.st-text h2,
+.st-text h3,
+.st-text h4,
+.st-text p {
+  width: 100%;
+}
 .st-text p {
   text-wrap: pretty;
 }
