--- a/sass/components/acf-pagebuilder/blocks/_text.scss
+++ b/sass/components/acf-pagebuilder/blocks/_text.scss
@@ -14,6 +14,14 @@
 		width: 50%;
 	}
 
+	h1,
+	h2,
+	h3,
+	h4,
+	p {
+		width: 100%;
+	}
+
 	p {
 		text-wrap: pretty;
 	}
